# cnv-upgrade-utilities

./: .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  codecov.yml  pyproject.toml  release_checklist_upgrade_lanes.py  tox.ini
.github/workflows/: ci.yml  daily.yml  main.yml  pr.yml
current_testing_paths/: release-checklist.json  release-checklist.md  upgrade-paths.json  upgrade-paths.md
docs/: UpgradeJobsStrategy.md  contributing.md  release_checklist_upgrade_plan.md  testing.md  upgrade-strategy.md  upgrade_jobs_info.md
scripts/: README.md  generate_current_testing_paths.py  generate_upgrade_snapshots.py
src/cnv_upgrade_utilities/: __init__.py  all_versions_upgrade_plan.py  post_upgrade_suites.py  release_checklist_upgrade_plan.py  upgrade_jobs_info.py  upgrade_types.py  utils.py  version_explorer_utils.py  version_types.py
src/utils/: __init__.py  build_helpers.py  constants.py  models.py  version_explorer.py
tests/: __init__.py  conftest.py  factories.py  test_build_helpers.py  test_e2e.sh  test_models.py  test_post_upgrade_suites.py  test_release_checklist.py  test_upgrade_jobs_info.py  test_upgrade_types.py  test_utils.py  test_version_types.py
tests/e2e/: conftest.py  expected_lanes.py  fbc_parser.py  test_cross_validation.py  test_fbc_upgrade_paths.py  test_fbc_verification.py  test_release_checklist_e2e.py  test_upgrade_paths.py
tests/e2e/cli/: test_cli_errors.py
tests/e2e/cross_validation/: test_cross_validation.py
tests/e2e/fbc/: conftest.py  test_channel_consistency.py  test_eol_rejection.py  test_stage_prod_consistency.py  test_stale_detection.py  test_upgrade_lanes.py  test_version_coverage.py
tests/e2e/release_checklist/: test_eol.py  test_negative.py  test_supported.py
tests/e2e/upgrade_jobs_info/: conftest.py  test_bundle_format.py  test_coverage.py  test_full_format.py  test_gating.py  test_minor_format.py  test_mixed_format.py  test_negative.py
tests/e2e/utils/: assertions.py  expected_lanes.py  fbc_data.py  fbc_parser.py
upgrade_plans/: all_versions_summary.json  upgrade_plan_4_16.json  upgrade_plan_4_17.json  upgrade_plan_4_18.json  upgrade_plan_4_19.json  upgrade_plan_4_20.json  upgrade_plan_4_21.json
upgrade_utils/: version_explorer_utils.py
utils/: build_helpers.py  version_explorer.py
