[project]
name = "cnv-upgrade-utilities"
version = "0.1.0"
description = "A utilities repo for cnv upgrade testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "packaging>=24.0",
    "requests>=2.32.5",
    "timeout-sampler>=1.0.22",
]

[project.scripts]
release_checklist_upgrade_plan = "cnv_upgrade_utilities.release_checklist_upgrade_plan:main"
upgrade_jobs_info = "cnv_upgrade_utilities.upgrade_jobs_info:main"
all_versions_upgrade_plan = "cnv_upgrade_utilities.all_versions_upgrade_plan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnv_upgrade_utilities"]
