[project]
name = "cnv-upgrade-utilities"
version = "0.1.0"
description = "A utilities repo for cnv upgrade testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "packaging>=24.0",
    "requests>=2.32.5",
    "timeout-sampler>=1.0.22",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "flake8>=7.1.0",
]

[project.scripts]
release_checklist_upgrade_plan = "cnv_upgrade_utilities.release_checklist_upgrade_plan:main"
upgrade_jobs_info = "cnv_upgrade_utilities.upgrade_jobs_info:main"
all_versions_upgrade_plan = "cnv_upgrade_utilities.all_versions_upgrade_plan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnv_upgrade_utilities", "src/utils"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
