[project]
name = "cnv-upgrade-utilities"
version = "0.1.0"
description = "A utilities repo for cnv upgrade testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.0",
    "packaging>=24.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "timeout-sampler>=1.0.22",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "flake8>=7.1.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pyyaml>=6.0.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "coverage[toml]>=7.6.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "tox>=4.21",
    "tox-uv>=1.15",
]

[project.scripts]
release_checklist_upgrade_plan = "cnv_upgrade_utilities.release_checklist_upgrade_plan:main"
upgrade_jobs_info = "cnv_upgrade_utilities.upgrade_jobs_info:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cnv_upgrade_utilities", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-v --tb=short"
markers = [
    "e2e: end-to-end tests requiring VERSION_EXPLORER_URL",
    "fbc: FBC ground truth verification requiring cnv-fbc repo access",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "src:."
packages = ["cnv_upgrade_utilities", "utils"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "timeout_sampler.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "."]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["cnv_upgrade_utilities", "utils"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".tox"]
skips = ["B101"]
